--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -593,3 +593,39 @@ h2 {
 	overflow: hidden;
 }
 
+.modal-body {
+	min-height: 130px;
+}
+
+.btn-scelta{
+	width: 45%;
+	white-space: normal;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-weight: bold;
+	padding: 6px 12px;
+	height: 46px;
+}
+
+.text-btn-scelta {
+	line-height: 32px;
+	height: 32px;
+}
+
+.btn-last {
+	margin-right: 10px;
+	float: right;
+}
+
+.btn-first {
+	margin-left: 10px;
+}
+
+.transparent {
+	background-color: transparent;
+	border: 0px;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
